# ihmc-open-robotics-software

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IHMCNetworkParameters.ini  Publish to Valkyrie (gradle plugin).launch  Publish to Valkyrie Local.launch  Publish to Valkyrie.launch  README.md  build.gradle  build.gradle.kts  c  filter-commons-to-keep.txt  filter-euclid-to-keep.txt  filter-graphics-to-keep.txt  filter-math-to-keep.txt  filter-mecano-to-keep.txt  filter-yovariables-to-keep.txt  gradle.properties  ihmc.repos  ihmc_develop.repos  product.properties  settings.gradle  settings.gradle.kts
CommonWalkingControlModules/: .cproject  CMakeLists.txt  build.gradle  build_native_libs.bat  build_native_libs.sh  generateHQPJNIHeaders.sh  generateJNIHeaders.sh  gradle.properties  settings.gradle
CommonWalkingControlModules/Configurations/: IMUMount0.graphConf  MomentumControlModulesEvaluation.guiConf  TestRobot_RemoteTestRunner__RegistryConfiguration  comEstimation.graphConf
CommonWalkingControlModules/StructureViewsDiagrams/: 160308_MessageGeneratorsAndTests.ajsv  160414_HoldPositionForPointyRocks.ajsv  160415_FootRotationProcessor.ajsv  WholeBodyControllerCore.ajsv
CommonWalkingControlModules/csrc/: ActiveSetQPMomentumOptimizer.cpp  ActiveSetQPMomentumOptimizer.h  CMakeLists.txt  CVXMomentumOptimizerWithGRFPenalizedSmootherNative.c  CVXMomentumOptimizerWithGRFPenalizedSmootherNative.h  CVXMomentumOptimizerWithGRFSmootherNative.c  CVXMomentumOptimizerWithGRFSmootherNative.h  CVXWithCylinderNative.c  CVXWithCylinderNative.h  ContactPointWrenchOptimizerNative.c  ContactPointWrenchOptimizerNative.h  CylinderAndPlaneContactForceOptimizerNative.c  CylinderAndPlaneContactForceOptimizerNative.h  HQPNative.cpp  HQPNative.h  LeeGoswamiCoPAndNormalTorqueOptimizerNative.c  LeeGoswamiCoPAndNormalTorqueOptimizerNative.h  LeeGoswamiForceOptimizerNative.c  LeeGoswamiForceOptimizerNative.h  LinearInvertedPendulumCapturePointCalculator.c  MomentumOptimizerNative.c  MomentumOptimizerNative.h  SimpleHQPNative.cpp  SimpleHQPNative.h
CommonWalkingControlModules/csrc/ActiveSetQP/: CMakeLists.txt  ClassLoaderObjectInputStream.java  QP.cpp  checkJavaDumpedCases.m  checkOpt.m  eiquadprog.hpp  fastQP.m  mex.cmake  runTestCase.m
CommonWalkingControlModules/csrc/CVXMomentumOptimizerWithGRFPenalizedSmoother/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
CommonWalkingControlModules/csrc/CVXMomentumOptimizerWithGRFSmoother/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
CommonWalkingControlModules/csrc/CVXWithCylinder/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
CommonWalkingControlModules/csrc/HQP/: ActiveSet.cpp  ActiveSet.hpp  Algebra.cpp  Algebra.hpp  Allocator.cpp  Allocator.hpp  BaseY.cpp  BaseY.hpp  BasicStage.cpp  BasicStage.hpp  Bound.cpp  Bound.hpp  CMakeLists.txt  DestructiveColPivQR.hpp  Givens.cpp  Givens.hpp  HCOD.cpp  HCOD.hpp  Makefile  Random.cpp  Random.hpp  Stage.cpp  Stage.hpp  SubMatrix.hpp  api.hpp  debug.cpp  debug.hpp  solvers.hpp  soth.cpp
CommonWalkingControlModules/csrc/contactPointWrenchOptimizer/: Makefile  csolve.c  csolve.m  cvxsolve.m  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
CommonWalkingControlModules/csrc/cylinderAndPlaneContactForceOptimizer/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  (+3 more)
CommonWalkingControlModules/gradleScripts/: dependencies.gradle  repositories.gradle
CommonWalkingControlModules/lib/: libCVXMomentumOptimizerWithGRFPenalizedSmoother_msz.jnilib  libCVXMomentumOptimizerWithGRFPenalizedSmoother_rel.jnilib
CommonWalkingControlModules/mathematica/: ConnectableMinJerkTrajectory.nb  Constrained5thOrderPolyTrajectory.nb  Parabolic Cartesian Trajectory Generator.nb  ParabolicVelocityICPTrajectoryGenerator.nb  linearAccelerationMeasurement.nb  quaternionErrorDynamics.nb
CommonWalkingControlModules/technicalDocuments/: consistentAccelerationsWithNullspace.lyx  general lipm.lyx  momentum solver constraints.lyx  parabolic cartesian trajectory generator.lyx  parallel jacobians projection.lyx  straight up then parabolic cartesian trajectory generator.lyx  vtp jacobian determinant.lyx
ihmc-robotics-toolkit/NativeCommonOps/: CMakeLists.txt  NativeCommonOps.cpp  us_ihmc_robotics_linearAlgebra_commonOps_NativeCommonOpsWrapper.h
promp/: AUTHORS  CMakeLists.txt  Dockerfile  README.md  build.gradle.kts  generate-java-bindings.sh  generate-java-mappings-docker.sh  generate-java-mappings.bat  generateJavaMappings.bat  generateJavaMappings.sh  generateJavaMappingsDocker.bat  generateJavaMappingsDocker.sh  gradle.properties  run-docker-container.sh  runDockerContainer.sh  settings.gradle.kts  windowsBuildEnvironmentSetup.bat
promp/cmake/: promp.cmake.in  prompConfigVersion.cmake.in
promp/doc/: CMakeLists.txt  api.md  create_docs.sh  prompDoxyConfig.conf
promp/etc/: .gitignore  1Dplots_LearnAndUpdateProMPExample.py  1Dplots_LearnProMPExample.py  1Dplots_ProMPAssistantLog.py  1Dplots_ProMPAssistantTest.py  1Dplots_RDXVRSharedControl.py  1Dplots_simple_promp.py  clearLog.sh  covariance.csv  debug.py  demo1.csv  demo10.csv  demo2.csv  demo3.csv  demo4.csv  demo5.csv  demo6.csv  demo7.csv  demo8.csv  demo9.csv  inferenceSpeedDebug.py  mean.csv  rectifyDemo.py  simple_promp_plot.py  test1.csv  test10.csv  test2.csv  test3.csv  test4.csv  test5.csv  test6.csv  test7.csv  test8.csv  test9.csv  variance.csv
promp/examples/: 1Dplots_simple_promp.py  CMakeLists.txt  extended_promp.cpp  simple_promp.cpp  simple_promp.py
promp/python/: CMakeLists.txt  bind_csv_reader.cpp  bind_promp.cpp  bind_serializer.cpp  bind_trajectory.cpp  bind_trajectory_group.cpp  pypromp.cpp  pypromp.hpp
promp/test/: CMakeLists.txt  test_io.cpp  test_learn.cpp
(+51279 files in other folders)
