<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ihmc_demo_py</name>
  <version>0.1.0</version>
  <description>Example nodes for interacting/testing ihmc software.</description>
  <maintainer email="dcalvert@ihmc.us">Duncan Calvert</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>controller_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
