<?xml version="1.0"?>
<package format="2">
  <name>val_description</name>
  <version>1.0.3</version>
  <description>The val_description package</description>

  <maintainer email="jordan.t.lack@nasa.gov">jordan</maintainer>

  <license>NASA-1.3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>
  <depend>rospy</depend>


  <export>

  </export>
</package>