<?xml version="1.0"?>
<package>
  <name>ihmc_gazebo</name>
  <version>0.0.0</version>
  <description>The ihmc_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="duncan@todo.todo">duncan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ihmc_gazebo</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  
  <!-- Taken from drcsim_gazebo -->
  <build_depend>atlas_msgs</build_depend>
  <build_depend>drcsim_gazebo_plugins</build_depend>
  <build_depend>drcsim_gazebo_ros_plugins</build_depend>
  <build_depend>drcsim_model_resources</build_depend>
  <build_depend>atlas_description</build_depend>
  <build_depend>irobot_hand_description</build_depend>
  <build_depend>multisense_sl_description</build_depend>
  <build_depend>sandia_hand_description</build_depend>
  <run_depend>atlas_msgs</run_depend>
  <run_depend>drcsim_gazebo_plugins</run_depend>
  <run_depend>drcsim_gazebo_ros_plugins</run_depend>
  <run_depend>drcsim_model_resources</run_depend>
  <run_depend>atlas_description</run_depend>
  <run_depend>irobot_hand_description</run_depend>
  <run_depend>multisense_sl_description</run_depend>
  <run_depend>sandia_hand_description</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <gazebo_ros plugin_path="${prefix}/../../devel/lib"/>

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
