set (files 
  head.dae
  l_clav.dae
  l_farm.dae
  l_foot.dae
  l_hand.dae
  l_larm.dae
  l_lglut.dae
  l_lleg.dae
  l_scap.dae
  l_talus.dae
  ltorso.dae
  l_uarm.dae
  l_uglut.dae
  l_uleg.dae
  mtorso.dae
  pelvis.dae
  r_clav.dae
  r_farm.dae
  r_foot.dae
  r_hand.dae
  r_larm.dae
  r_lglut.dae
  r_lleg.dae
  r_lug.dae
  r_scap.dae
  r_talus.dae
  r_uarm.dae
  r_uglut.dae
  r_uleg.dae
  utorso.dae
  head.stl
  l_clav.stl
  l_farm.stl
  l_foot.stl
  l_hand.stl
  l_larm.stl
  l_lglut.stl
  l_lleg.stl
  l_scap.stl
  l_talus.stl
  ltorso.stl
  l_uarm.stl
  l_uglut.stl
  l_uleg.stl
  mtorso.stl
  pelvis.stl
  r_clav.stl
  r_farm.stl
  r_foot.stl
  r_hand.stl
  r_larm.stl
  r_lglut.stl
  r_lleg.stl
  r_lug.stl
  r_scap.stl
  r_talus.stl
  r_uarm.stl
  r_uglut.stl
  r_uleg.stl
  utorso.stl
)
install(FILES ${files} DESTINATION ${GAZEBO_INSTALL_PATH}/atlas/meshes/)
